# agent_study_workspace

./: README.md  sample.txt
learn_20260205/: Dockerfile  README.md  docker-compose.yml
learn_20260205/app/: README.md  env_utils.py  langgraph.json  pyproject.toml  read.py  requirements.txt
learn_20260205/app/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
learn_20260205/app/agent.egg-info/: PKG-INFO  SOURCES.txt
learn_20260205/app/src/agent/: env_utils.py  my_agent.py  my_llm.py
learn_20260205/app/src/test_llm/: format_output.py
learn_20260210/: Dockerfile  docker-compose.yml  requirements.txt
learn_20260210/app/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
learn_20260210/app/api/: __init__.py
learn_20260210/app/api/models/: __init__.py  knowledge_base.py  quality_inspector.py  script_recommender.py
learn_20260210/app/api/routers/: __init__.py  knowledge_base.py  quality_inspector.py  script_recommender.py
learn_20260210/app/assistants/: __init__.py
learn_20260210/app/assistants/knowledge_base/: __init__.py  intent_classifier.py  question_extractor.py  question_generator.py  script_generator.py
learn_20260210/app/assistants/quality_inspector/: __init__.py  auto_inspector.py  conversation_parser.py  report_generator.py  speech_to_text.py
learn_20260210/app/assistants/script_recommender/: __init__.py  context_analyzer.py  intent_recognizer.py  personalization_adapter.py  script_recommender.py
learn_20260210/app/config/: __init__.py  constants.py  settings.py
learn_20260210/app/core/: __init__.py  llm_client.py  vector_db.py
learn_20260210/app/tests/: __init__.py  conftest.py  test_api.py  test_units.py
learn_20260210/app/utils/: __init__.py  helpers.py  logger.py
learn_20260210/markdown/: README.md  architecture.md  code_review_optimization.md  config_module.md  config_module_design.md  docker_config.md  interface_integration_design.md  knowledge_base_module_design.md  llm_module_design.md  project_structure.md  quality_inspector_module_design.md  requirements.md  script_recommender_module_design.md  tech_stack.md  testing_strategy.md  vector_db_module_design.md  大模型客服助手项目辅助开发文档大纲.md
