[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new LangGraph agent."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # LangGraph & 运行时（与当前环境中已验证可用的版本保持一致）
    "langgraph==1.0.7",
    "python-dotenv==1.2.1",

    # LangChain 及模型接入（my_agent / my_llm 使用）
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
    "langchain-deepseek==1.0.1",
]


[project.optional-dependencies]
dev = [
    # LangGraph CLI（本地开发用：python -m langgraph_cli dev）
    "langgraph-cli[inmem]==0.4.12",
    # 类型检查 / Lint / 测试
    "anyio>=4.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]